--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,13 @@ environment:
 dependencies:
   cloud_firestore: ^4.13.6
   firebase_core: ^2.24.2
+  firebase_storage: ^11.5.6
   flutter:
     sdk: flutter
+  image_picker: ^1.0.5
   intl: ^0.19.0
   provider: ^6.1.1
+  tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -20,4 +23,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  assets: 
+    - assets/models/mobilenet_v1_1.0_224_quant.tflite
+    - assets/models/labels_mobilenet_quant_v1_224.txt
   uses-material-design: true
