--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_storage: ^11.5.6
   flutter:
     sdk: flutter
+  http: ^1.1.2
   image_picker: ^1.0.5
   intl: ^0.19.0
   provider: ^6.1.1
